module coop_print_badge: [FIX] try to split member name if too long

--- a/louve_addons/coop_print_badge/static/src/css/badge.css
+++ b/louve_addons/coop_print_badge/static/src/css/badge.css
@@ -38,6 +38,10 @@
     float: left;
     height:25mm;
     font-size: 25;
+    width:65mm !important;
+    overflow: hidden;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 .barcode_image{
     float: left;
